# cellular-automata

./: .gitignore  Cargo.toml  README.md  default.toml
examples/brians_brain/: brians_brain.rs  main.rs
examples/conways_life/: conway.rs  main.rs
examples/langtons_ant/: langtons_ant.rs  main.rs
examples/rock_paper_scissors/: main.rs  rock_paper_scissors.rs
src/: automata.rs  grid.rs  lib.rs  sim.rs  sim_config.rs  vector_2d.rs  viewport.rs
src/vectors/: mod.rs  vector_2d.rs  vector_2d_int.rs
