[package]
name = "cellular_automata"
version = "0.1.0"
edition = "2021"

[lib]
name = "cellular_automata"
path = "src/lib.rs"

[dependencies]
colorgrad = "0.6.2"
dotenv = "0.15"
dotenv_codegen = "0.15"
env_logger = "0.10"
num-traits = "0.2.19"
pixels = "0.13.0"
rand = "0.8.5"
winit = "0.28"
winit_input_helper = "0.14"
